objects/HealthCloudGA__FilterCriterion__c.object
<CustomObject>
    <fields>
        <fullName>HealthCloudGA__Grouping__c</fullName>
        <label>Grouping</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsWaveList__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean that differentiates patient list from Einstein Analytics patient list.</description>
        <label>IsWaveList</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__ObjectName__c</fullName>
        <label>Object Name</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Filter Criterion</label>
    <listViews>
        <fullName>HealthCloudGA__All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Filter Criterion Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Criteria</pluralLabel>
    <recordTypes>
        <fullName>HealthCloudGA__PatientList</fullName>
        <active>true</active>
        <label>PatientList</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthCloudGA__Timeline</fullName>
        <active>true</active>
        <label>Timeline</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HealthCloudGA__No_Duplicates</fullName>
        <active>true</active>
        <errorConditionFormula>AND( OR( ISNEW(), ISCHANGED( Name )), NOT( ISBLANK (VLOOKUP( $ObjectType.HealthCloudGA__FilterCriterion__c.Fields.Name ,  $ObjectType.HealthCloudGA__FilterCriterion__c.Fields.Name ,  Name ))))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Another filter list already uses this name. Select a unique name.</errorMessage>
    </validationRules>
</CustomObject>